--- a/assist.html
+++ b/assist.html
@@ -15,7 +15,7 @@
 				</div>
 				
 			
-				<form action="read_csv.php" method="post" target="_blank" style='text-align: center;'>
+				<form action="create_graph_engineer.php" method="post" target="_blank" style='text-align: center;'>
 					<button type="submit" id="submit1">See Results</button>
 				</form>
 			</div>
@@ -33,7 +33,7 @@
 					</ul>
 				</div>
 		
-				<form action="read_csv_2.php" method="post" target="_blank" style='text-align: center;'>
+				<form action="create_graph_conductor.php" method="post" target="_blank" style='text-align: center;'>
 					<button type="submit" id="submit2">See Results</button>
 				</form>
 		    
