Clean up white space

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 				<h1>Simulator of Human Operator Workload (SHOW)</h1>
 			</div>
 			<!-- Navigation Bar -->
-			<nav id="navBar">
+			<nav id="topNav">
 				<ul>
 					<li><a id="navElement" href="home.html">Home</a></li>
 					<li><a id="navElement" href="index.php">Run Simulation</a></li>
