--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 				<h1>Simulator of Human Operator Workload (SHOW)</h1>
 			</div>
 			<!-- Navigation Bar -->
-			<nav id="navBar">
+			<nav id="topNav">
 				<ul>
 					<li><a id="navElement" class="active" href="#home">Home</a></li>
 <!-- 					<li><a id="navElement" class=<?php if ($selected == "profile") echo ' active'; ?> href="#home">Home</a></li> -->
