Moved home.html to index.html

--- a/side_navigation.html
+++ b/side_navigation.html
@@ -1,5 +1,5 @@
 <div id="navBar">
-	<a id="introduction" href="index.php">Introduction</a><br><br>
+	<a id="introduction" href="runSim.php">Introduction</a><br><br>
 	<a id="runSimulation" href="#page2">Run Simulation</a><br><br>
 	<a id="resultAnalysis" href="create_txt.php">Result Analysis</a><br><br>
 	<a id="tweakParameters" href="replications.php">Tweak Parameters</a><br><br>
