--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,8 @@
 			<!-- Navigation Bar -->
 			<nav id="topNav">
 				<ul>
-					<li><a id="navElement" href="home.html">Home</a></li>
-					<li><a id="navElement" href="index.php">Run Simulation</a></li>
+					<li><a id="navElement" href="index.html">Home</a></li>
+					<li><a id="navElement" href="runSim.php">Run Simulation</a></li>
 					<li><a id="navElement" class="active" href="#contact-us">Contact Us</a></li>
 				<ul>
 			</nav>
