--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	</head>
 	<body>
 		<!-- Header -->
-		<header id="fixedHead">	
-			<!-- Title -->	
+		<header id="fixedHead">
+			<!-- Title -->
 			<div id="title">
 				<h1>Simulator of Human Operator Workload (SHOW)</h1>
 			</div>
@@ -16,7 +16,7 @@
 				<ul>
 					<li><a id="navElement" class="active" href="#home">Home</a></li>
 <!-- 					<li><a id="navElement" class=<?php if ($selected == "profile") echo ' active'; ?> href="#home">Home</a></li> -->
-					<li><a id="navElement" href="index.php">Run Simulation</a></li>
+					<li><a id="navElement" href="runSim.php">Run Simulation</a></li>
 					<li><a id="navElement" href="contact.html">Contact Us</a></li>
 				<ul>
 			</nav>
@@ -27,7 +27,7 @@
 		<div id="main">
 			<div id="homePage" class="page">
 				<p>
-					Welcome to the <em>Simulator of Human Operator Workload (SHOW)</em>! This tool, designed by Duke University researchers, simulates a freight rail operator's workload across the duration of a given trip. With SHOW, you can choose a trip with unique conditions and then see the operator's average workload after thousands of similar trips. 
+					Welcome to the <em>Simulator of Human Operator Workload (SHOW)</em>! This tool, designed by Duke University researchers, simulates a freight rail operator's workload across the duration of a given trip. With SHOW, you can choose a trip with unique conditions and then see the operator's average workload after thousands of similar trips.
 				</p>
 				<p>
 					You should use this tool to answer the following questions:
@@ -35,7 +35,7 @@
 						<li><em>When</em> are my operators over- or under-utilized at work?</li>
 						<li><em>Why</em> are my operators over- or under-utilized at work?</li>
 						<li><em>How</em> might we improve operator workload, and overall system efficiency and safety?</li>
-					</ul> 
+					</ul>
 				</p>
 			</div>
 		</div>
