Renamed navbar to sideNav

--- a/side_navigation.html
+++ b/side_navigation.html
@@ -1,4 +1,4 @@
-<div id="navBar">
+<div id="sideNav">
 	<a id="introduction" href="runSim.php">Introduction</a><br><br>
 	<a id="runSimulation" href="#page2">Run Simulation</a><br><br>
 	<a id="resultAnalysis" href="create_txt.php">Result Analysis</a><br><br>
@@ -7,14 +7,14 @@
 </div>
 
 <style>
-#navBar a {
+#sideNav a {
 	border: 1px solid black;
 	border-radius: 15px;
 	padding: 10px 20px;
 	display: inline-block;
 }
 
-#navBar{
+#sideNav{
 	border: 1px dashed #888;
 	border-radius: 15px;
 	position: fixed;
