--- a/side_navigation.html
+++ b/side_navigation.html
@@ -1,13 +1,18 @@
 
 <div id="navBar">
-	<a id="introduction" href="index.php">Introduction</a><br><br>
-	<a id="runSimulation" href="#page2">Run Simulation</a><br><br>
-	<a id="resultAnalysis" href="create_txt.php">Result Analysis</a><br><br>
-	<a id="tweakParameters" href="replications.php">Tweak Parameters</a><br><br>
-	<a id="summary" href="summary_page.php">Summary Page</a><br><br>
+	<a id="introduction" href="index.php" >Introduction</a><br><br>
+	<a id="runSimulation" href="create_txt.php" >Run Simulation</a><br><br>
+	<a id="resultAnalysis" href="create_graph_engineer.php" >Result Analysis</a><br><br>
+	<a id="tweakParameters" href="replications.php" >Tweak Parameters</a><br><br>
+	<a id="summary" href="summary_page.php" >Summary Page</a><br><br>
 </div>
 
+
+
 <style>
+
+
+
 #navBar a {
 	border: 1px solid black;
 	border-radius: 15px;
