Fixed up side nav

--- a/side_navigation.html
+++ b/side_navigation.html
@@ -1,28 +1,20 @@
+<nav id="sideNav">
+	<ul>
+		<li><a id="introduction" href="runSim.php">Input Settings</a></li>
+		<li><a id="runSimulation" href="create_txt.php">View Results</a></li>
+		<li><a id="resultAnalysis" href="create_graph_engineer.php">View Detailed Analysis</a></li>
+		<li><a id="tweakParameters" href="replications.php">Tweak Parameters</a></li>
+		<li><a id="summary" href="summary_page.php">Print Report</a></li>
+	</ul>
+</nav>
 
-
-<div id="sideNav">
-	<a id="introduction" href="runSim.php" >Introduction</a><br><br>
-	<a id="runSimulation" href="create_txt.php" >Run Simulation</a><br><br>
-	<a id="resultAnalysis" href="create_graph_engineer.php" >Result Analysis</a><br><br>
-	<a id="tweakParameters" href="replications.php" >Tweak Parameters</a><br><br>
-	<a id="summary" href="summary_page.php" >Summary Page</a><br><br>
-</div>
-
-
-
-<style>
-
-
-
-#sideNav a {
+<!-- #sideNav a {
 	border: 0px solid black;
 	border-radius: 0px;
 	padding: 10px 10px;
 	display: inline-block;
 	text-decoration: none;
-	
 }
-
 
 #sideNav{
 	border: 1px solid #e7e7e7;
@@ -36,6 +28,4 @@
 	padding-right: 15px;
 	background-color: #f3f3f3;
 	display: inline-block;
-}
-
-</style>
+} -->
