detailed analysis page added

--- a/side_navigation.html
+++ b/side_navigation.html
@@ -2,7 +2,7 @@
 	<ul>
 		<li><a id="introduction" href="runSim.php">Input Settings</a></li>
 		<li><a id="runSimulation" href="create_txt.php">View Results</a></li>
-		<li><a id="resultAnalysis" href="create_graph_engineer.php">View Detailed Analysis</a></li>
+		<li><a id="resultAnalysis" href="detailed_analysis.php">View Detailed Analysis</a></li>
 		<li><a id="tweakParameters" href="replications.php">Tweak Parameters</a></li>
 		<li><a id="summary" href="summary_page.php">Print Report</a></li>
 	</ul>
