--- a/assist.html
+++ b/assist.html
@@ -6,34 +6,33 @@
 				</div>
 				<h3>On average, your <em>engineer</em> is projected to experience:</h3>
 				<div id="bullets">
-					<ul style="list-style-type:circle">
-						<li><h4 id="low_work_0">low workload range for <?php echo $low_count_0*10; ?> minutes</h4></li>
-						<li><h4 id="normal_work_0">moderate workload range for <?php echo $normal_count_0*10; ?> minutes</h4></li>
-						<li><h4 id="high_work_0">high workload range for <?php echo $high_count_0*10; ?> minutes</h4></li>
+					<ul>
+						<li id="low_work_0">low workload range for <?php echo $low_count_0*10; ?> minutes</li>
+						<li id="normal_work_0">moderate workload range for <?php echo $normal_count_0*10; ?> minutes</li>
+						<li id="high_work_0">high workload range for <?php echo $high_count_0*10; ?> minutes</li>
 					</ul>
 				</div>
 
 				<form action="create_graph_engineer.php" method="post" target="_blank" style='text-align: center;'>
-					<button type="submit" id="submit1">See Results</button>
+					<button type="submit" id="submit1">View Details</button>
 				</form>
 			</div>
-			
+
 			<div id="operator2" style='<?php echo $operator2Style; ?>'>
 				<div id="operator2title" style="text-align: center;">
 					<h2><u>Conductor</u></h2>
 				</div>
 				<h3>On average, your <em>conductor</em> is projected to experience:</h3>
 				<div id="bullets">
-					<ul style="list-style-type:circle">
-						<li><h4 id="low_work_1">low workload range for <?php echo $low_count_1*10; ?> minutes</h4></li>
-						<li><h4 id="normal_work_1">moderate workload range for <?php echo $normal_count_1*10; ?> minutes</h4></li>
-						<li><h4 id="high_work_1">high workload range for <?php echo $high_count_1*10; ?> minutes</h4></li>
+					<ul>
+						<li id="low_work_1">low workload range for <?php echo $low_count_1*10; ?> minutes</li>
+						<li id="normal_work_1">moderate workload range for <?php echo $normal_count_1*10; ?> minutes</li>
+						<li id="high_work_1">high workload range for <?php echo $high_count_1*10; ?> minutes</li>
 					</ul>
 				</div>
-		
+
 				<form action="create_graph_conductor.php" method="post" target="_blank" style='text-align: center;'>
 					<button type="submit" id="submit2">See Results</button>
 				</form>
 			</div>
 		</div>
-
