Fixed up bugs in preparation to share link

--- a/assist.html
+++ b/assist.html
@@ -13,7 +13,7 @@
 					</ul>
 				</div>
 
-				<form action="create_graph_engineer.php" method="post" target="_blank" style='text-align: center;'>
+				<form action="create_graph_engineer.php" method="post" style='text-align: center;'>
 					<button type="submit" id="submit1">View Details</button>
 				</form>
 			</div>
@@ -31,7 +31,7 @@
 					</ul>
 				</div>
 
-				<form action="create_graph_conductor.php" method="post" target="_blank" style='text-align: center;'>
+				<form action="create_graph_conductor.php" method="post" style='text-align: center;'>
 					<button type="submit" id="submit2">See Results</button>
 				</form>
 			</div>
