--- a/assist.html
+++ b/assist.html
@@ -1,38 +1,34 @@
 <div id="page" class='page'>
 		<div id="operators" class="operatorSummaryOuter">
 			<div id="operator1">
-				<div id="operator2title" style="text-align: center;">
-					<h2><u>Engineer</u></h2>
-				</div>
+				
 				<h3>On average, your <em>engineer</em> is projected to experience:</h3>
 				<div id="bullets">
 					<ul>
-						<li id="low_work_0">low workload range for <?php echo $low_count_0*10; ?> minutes</li>
+						<span class="tooltip" onmouseover="tooltip.pop(this, 'Levels of utilization below 30% have been associated with poor performance due to boredom and distraction')"><li id="low_work_0">low workload range for <?php echo $low_count_0*10; ?> minutes</li></span>
 						<li id="normal_work_0">moderate workload range for <?php echo $normal_count_0*10; ?> minutes</li>
-						<li id="high_work_0">high workload range for <?php echo $high_count_0*10; ?> minutes</li>
+						<span class="tooltip" onmouseover="tooltip.pop(this, 'A 70% utilization threshold was selected to indicate an upper bound of optimal task loading, at which point operators may be too busy to accumulate information required to maintain situational awareness for safety')"><li id="high_work_0">high workload range for <?php echo $high_count_0*10; ?> minutes</li></span>
 					</ul>
 				</div>
 
 				<form action="create_graph_engineer.php" method="post" style='text-align: center;'>
-					<button type="submit" id="submit1">View Details</button>
+					<button type="submit" id="submit1">Investigate</button>
 				</form>
 			</div>
 
 			<div id="operator2" style='<?php echo $operator2Style; ?>'>
-				<div id="operator2title" style="text-align: center;">
-					<h2><u>Conductor</u></h2>
-				</div>
+				
 				<h3>On average, your <em>conductor</em> is projected to experience:</h3>
 				<div id="bullets">
 					<ul>
-						<li id="low_work_1">low workload range for <?php echo $low_count_1*10; ?> minutes</li>
+						<span class="tooltip" onmouseover="tooltip.pop(this, 'Levels of utilization below 30% have been associated with poor performance due to boredom and distraction')"><li id="low_work_1">low workload range for <?php echo $low_count_1*10; ?> minutes</li></span>
 						<li id="normal_work_1">moderate workload range for <?php echo $normal_count_1*10; ?> minutes</li>
-						<li id="high_work_1">high workload range for <?php echo $high_count_1*10; ?> minutes</li>
+						<span class="tooltip" onmouseover="tooltip.pop(this, 'A 70% utilization threshold was selected to indicate an upper bound of optimal task loading, at which point operators may be too busy to accumulate information required to maintain situational awareness for safety')"><li id="high_work_1">high workload range for <?php echo $high_count_1*10; ?> minutes</li></span>
 					</ul>
 				</div>
 
 				<form action="create_graph_conductor.php" method="post" style='text-align: center;'>
-					<button type="submit" id="submit2">See Results</button>
+					<button type="submit" id="submit2">Investigate</button>
 				</form>
 			</div>
 		</div>
