--- a/assist.html
+++ b/assist.html
@@ -11,7 +11,7 @@
 					</ul>
 				</div>
 
-				<form action="investigate_engineer.php" method="post" style='text-align: center;'>
+				<form action="investigate.php?operator=engineer" method="post" style='text-align: center;'>
 					<button type="submit" id="submit1">Investigate</button>
 				</form>
 			</div>
@@ -27,7 +27,7 @@
 					</ul>
 				</div>
 
-				<form action="investigate_conductor.php" method="post" style='text-align: center;'>
+				<form action="investigate.php?operator=conductor" method="post" style='text-align: center;'>
 					<button type="submit" id="submit2">Investigate</button>
 				</form>
 			</div>
