--- a/operator.html
+++ b/operator.html
@@ -1,6 +1,22 @@
 			<div id="page" class='page'>
 					<div id="operators" class="operatorSummaryOuter">
-						<div id="operator1">
+
+						<div class="operators">
+							<h3>On average, your <em>dispatcher</em> is projected to experience:</h3>
+							<div id="bullets">
+								<ul>
+									<li id="low_work_0">low workload range for <?php echo $low_count_2*10; ?> minutes  <span class="hint--right hint--rounded hint--large" aria-label= "Levels of utilization below 30% have been associated with poor performance due to boredom and distraction."><sup>(?)</sup></span></li>
+									<li id="normal_work_0">moderate workload range for <?php echo $normal_count_2*10; ?> minutes  </li>
+									<li id="high_work_0">high workload range for <?php echo $high_count_2*10; ?> minutes  <span class="hint--right hint--rounded hint--large" aria-label= "A 70% utilization threshold was selected to indicate an upper bound of optimal task loading, at which point operators may be too busy to accumulate information required to maintain situational awareness for safety."><sup>(?)</sup></span></li>
+								</ul>
+							</div>
+
+							<form action="investigate.php?operator=dispatcher" method="post" style='text-align: center;'>
+								<button type="submit" id="submit1" class="button" style="background-color: #4CAF50;">Investigate</button>
+							</form>
+						</div>
+
+						<div class="operators">
 							<h3>On average, your <em>engineer</em> is projected to experience:</h3>
 							<div id="bullets">
 								<ul>
@@ -15,7 +31,7 @@
 							</form>
 						</div>
 
-						<div id="operator2" style='<?php echo $operator2Style; ?>'>
+						<div class="operators" style='<?php echo $operator2Style; ?>'>
 							<h3>On average, your <em>conductor</em> is projected to experience:</h3>
 							<div id="bullets">
 								<ul>
